k8s/tinyurl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyurl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tinyurl
  template:
    metadata:
      labels:
        app: tinyurl
    spec:
      containers:
        - name: tinyurl
          image: droiddevgeeks/tinyurl:latest
          ports:
            - containerPort: 3000
