k8s/tinyurl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinyurl-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /url(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tinyurl
                port:
                  number: 3000
